src/index.css
/* ... */
@media only screen and (max-width: 600px) {
    .projectCardContainer,
    .memberCardContainer,
    .battlebotCardContainer {
        grid-template-columns: auto;
    }
    .teamLeadCardContainer {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
    }
    #prevSemesters {
        margin-left: 10%;
        margin-right: 10%;
    }
    #DiscordWidget {
        width: 100%;
        display: flex;
        justify-content: center;
    }
}
@media only screen and (max-width: 400px) {
    .battlebotSeasonCardContainer {
        grid-template-columns: auto;
    }
    #prevSemesters {
        margin-left: 20%;
        margin-right: 20%;
    }
}

.clipping-container {
    position: relative;
    border: 1px solid #aaa;
    margin-bottom: 12px;
    padding: 12px;
    width: 100%;
    overflow: hidden;
}

.modal {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    box-shadow: rgba(100, 100, 111, 0.3) 0px 7px 29px 0px;
    background-color: var(--white);
    border: 2px solid var(--white);
    border-radius: 12px;
    position: fixed;
    --modalWidth: 80%;
    width: var(--modalWidth);
    top: 70px;
    bottom: 70px;
    left: calc(50% - var(--modalWidth) / 2);
}

